--- a/PORTFOLIO/styles.css
+++ b/PORTFOLIO/styles.css
@@ -7,6 +7,10 @@ body {
     overflow-x: hidden;
 }
 
+html{
+    scroll-behaviour: smooth;
+}
+
 /* Header Styles */
 header {
     background: url('/images/background.png') no-repeat center center/cover;
@@ -19,13 +23,13 @@ header {
 
 header::before {
     content: '';
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
-    z-index: 1;
+    z-index: 2;
 }
 
 header h1, header p {
