--- a/PORTFOLIO/styles.css
+++ b/PORTFOLIO/styles.css
@@ -10,7 +10,10 @@ body {
 html{
     scroll-behaviour: smooth;
 }
-
+ul{
+    display:flex;
+    gap:15px;
+}
 /* Header Styles */
 header {
     background: url('/images/background.png') no-repeat center center/cover;
